<resources>
    <string name="app_name">Englock</string>
    <string name="full_app_name">Englock: Learn from Lockscreen</string>
    <string name="test_txt">TEST</string>
    <string name="test_txt_th">ทดสอบ</string>
    <string name="unlock">UNLOCK</string>
    <string name="lock">LOCK</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="channel_name">Englock Channel</string>
    <string name="channel_description">Englock\'s Notification Channel</string>

    <string name="txt_choice_A">CHOICE A</string>
    <string name="txt_choice_B">CHOICE B</string>
    <string name="txt_choice_C">CHOICE C</string>
    <string name="txt_choice_D">CHOICE D</string>

    <string name="action_example">Example action</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_shop">Shop</string>
    <string name="title_more">More</string>
    <string name="title_notifications">Notifications</string>

    //questtion_vocab_!question!_!answer!
    <string name="question_vocab">Which of the following has the closest meaning to this word?</string>

    <string name="toobad">Better luck next time!</string>
    <string name="niceone">That\'s correct!</string>

    //Free Shop
    <string name="freeques">Confirm your selection?</string>
    <string name="freeshoptitle1">Select your starting vocabulary pack!</string>
    <string name="freeshoptitle2">(All of these can be purchased later.)</string>


    //Home
    <string name="welcome">Welcome,</string>
    <string name="statsFromCloud">Do you want to retrieve your data from the cloud or not? (If not, your cloud data will be replaced with your local data.)</string>

    //Dashboard
    <string name="correctness">Correctness</string>
    <string name="recent">Recently seen</string>
    <string name="statswheel">(First choice/Seen :</string>
    <string name="statswheelunset">(First choice/Seen : 0/0)</string>

    //Shop
    <string name="shopItem0">School</string>
    <string name="shopItem1">Clothes</string>
    <string name="shopItem2">Emotions</string>
    <string name="shopItem3">Etiquette</string>
    <string name="shopItem4">Landforms</string>
    <string name="shopItem5">Fruits</string>
    <string name="shopItem6">Kingdom</string>
    <string name="shopItem7">Outer Space</string>
    <string name="shopItem8">Festival</string>
    <string name="shopItem9">Music</string>
    <string name="buyquestion1">Are you sure you want to buy</string>
    <string name="buyquestion2">\" vocabulary category for</string>
    <string name="buyquestion3">coins?</string>
    <string name="purchased">Purchased</string>
    <string name="selected">Selected</string>

    //Settings
    <string name="lockscreenquiz">Lock screen quiz</string>
    <string name="delay">Quiz delay timer</string>
    <string name="deletegoogle">Delete Google account</string>
    <string name="languageselect">Change application language</string>
    <string name="th">Thai</string>
    <string name="en">English</string>
    <string name="queslang">Select Language</string>
    <string name="quesdelay">Select Your Choice</string>
    <string name="confirmation">Confirmation</string>
    <string name="signoutgg">Do you want to delete your Google account?\n(Your records will not be deleted.)</string>
    <string name="second">Second</string>
    <string name="seconds">Seconds</string>

    <string name="settingarray1">Settings</string>
    <string name="settingarray2">Help</string>
    <string name="settingarray3">About us</string>
    <string name="settingarray4">Disclaimer</string>

    <string-array name="settingarray">
        <item>@string/settingarray1</item>
        <item>@string/settingarray2</item>
        <item>@string/settingarray3</item>
        <item>@string/settingarray4</item>
    </string-array>

    <string name="startLockscreen">Touch anywhere to start.</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to</string>
    <string name="slide_1_desc">\t\t\t\t\tLearn English vocabularies efficiently and conveniently from your Lock Screen in just a few seconds!</string>
    <string name="slide_1_desc1">Swipe left or touch next to go to the next page.</string>

    <string name="slide_2_desc">This will appear on your Lock Screen.</string>
    <string name="slide_2_desc1">Touch anywhere to start your quiz!</string>
    <string name="slide_2_desc2">Choose your answer.\nTry to get it right on first try to earn more coins.</string>
    <string name="slide_2_desc3">There\'s time limit so think fast!</string>

    <string name="slide_3_title1">Home</string>
    <string name="slide_3_title2">Dashboard</string>
    <string name="slide_3_desc">This will show basic information, like coins and your Google account.</string>
    <string name="slide_3_desc1">Here is how you perform. You can analyze from this and improve yourself even better!</string>
    <string name="slide_3_desc2">And we also keep records of your recently seen words, so you won\'t be missed in case you want to review them.</string>

    <string name="slide_4_title">Shop</string>
    <string name="slide_4_desc">Here is where you spend your coins.\nGet your new and gomore exciting vocabulary categories to improve your skills even further!</string>
    <string name="slide_4_desc1" translatable="false">The more,\n\t\t\t\t\t\t\tthe better!</string>

    <string name="slide_5_title">More</string>
    <string name="slide_5_desc">Find out more about Englock.\n\t\t\t\t\tAdjust Englock to your liking.</string>
    <string name="slide_5_desc1" translatable="false">Your app, your way.</string>

    <string name="slide_6_desc">Enjoy using</string>
    <string name="slide_6_desc1">(You can watch this again in Help of More section)</string>

    <string name="welcomescreen"> Welcome to Home Screen</string>

    <string name="exit">EXIT</string>

    <string name="disclaimer_txt">  This software is a work developed by Poptum Charoennaew, Nattapat Panchavinin and Punyavud Tomeboon from Bodindecha (Sing Singhaseni) under the provision of Lattapol Dansakul under Learning English Vocabulary via Lock Screen Application : Englock project, which has been supported by the National Electronics and Computer Technology Center (NECTEC), in order to encourage pupils and students to learn and practice their skills in developing software. Therefore, the intellectual property of this software shall belong to the developer and the developer gives NECTEC a permission to distribute this software as an “as is ” and non-modified software for a temporary and non-exclusive use without remuneration to anyone for his or her own purpose or academic purpose, which are not commercial purposes. In this connection, NECTEC shall not be responsible to the user for taking care, maintaining, training or developing the efficiency of this software. Moreover, NECTEC shall not be liable for any error, software efficiency and damages in connection with or arising out of the use of the software.”</string>

</resources>
