<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen5">


    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thaisansneueregular"
        android:gravity="center"
        android:lineSpacingExtra="-8sp"
        android:text="@string/slide_5_title"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/thaisansneueregular"
        android:gravity="center"
        android:lineSpacingExtra="-8sp"
        android:text="@string/slide_5_desc1"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/thaisansneueregular"
        android:lineSpacingExtra="-8sp"
        android:text="@string/slide_5_desc"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="156dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <ImageView
            android:id="@+id/imageViewx"
            android:layout_width="200dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/intro_5a" />

        <ImageView
            android:id="@+id/imageViewxx"
            android:layout_width="200dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewx"
            app:layout_constraintEnd_toEndOf="@+id/imageViewx"
            app:layout_constraintStart_toEndOf="@+id/imageViewx"
            app:layout_constraintTop_toBottomOf="@+id/imageViewx"
            app:srcCompat="@drawable/intro_5b" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>